[package]
edition = "2024"
name = "west"
description = "Current temperature fetcher written in Rust using openweather"
license = "none"
readme = "./README.md"
version = "1.0.0"
authors = ["kkettums"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
compile-dotenv = "0.1.0"
serde_json = "1.0"
geolocation = "0.2.1"
